--- a/date/2025-04/page-6.htm
+++ b/date/2025-04/page-6.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-23-free-node-subscribe-links.htm" title="4月23日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">4月23日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
-                        <li class="py-2"><a href="/news/article-75441.htm" title="同安宠物救助（同安宠物领养中心）">同安宠物救助（同安宠物领养中心）</a></li>
-                        <li class="py-2"><a href="/news/article-104480.htm" title="动物注射疫苗,最佳的用药方法是静脉注射()（动物注射给药的方法）">动物注射疫苗,最佳的用药方法是静脉注射()（动物注射给药的方法）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" title="4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址">4月19日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-85165.htm" title="为什么代码规范要求SQL语句不要过多的join？">为什么代码规范要求SQL语句不要过多的join？</a></li>
-                        <li class="py-2"><a href="/news/article-73431.htm" title="厦门同安宠物领养中心地址电话 厦门同安宠物领养中心地址电话号码">厦门同安宠物领养中心地址电话 厦门同安宠物领养中心地址电话号码</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-4-node-share.htm" title="3月4日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">3月4日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-87314.htm" title="动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）">动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）</a></li>
-                        <li class="py-2"><a href="/news/article-102848.htm" title="Ubuntu安装开发者平台Backstage">Ubuntu安装开发者平台Backstage</a></li>
+                        <li class="py-2"><a href="/news/article-78861.htm" title="动物医院都有什么部门管理 动物医院都有什么部门管理的">动物医院都有什么部门管理 动物医院都有什么部门管理的</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" title="4月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">4月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe.htm" title="3月12日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">3月12日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-88765.htm" title="兽医疫苗批号查询系统（兽用疫苗真伪查询）">兽医疫苗批号查询系统（兽用疫苗真伪查询）</a></li>
+                        <li class="py-2"><a href="/news/article-103647.htm" title="使用etcd选举sdk实践master/slave故障转移_在线工具">使用etcd选举sdk实践master/slave故障转移_在线工具</a></li>
+                        <li class="py-2"><a href="/news/article-85166.htm" title="Docker基础DockerFile文件详解">Docker基础DockerFile文件详解</a></li>
+                        <li class="py-2"><a href="/news/article-68199.htm" title="开宠物用品店挣钱吗现在（开宠物用品店需要准备什么）">开宠物用品店挣钱吗现在（开宠物用品店需要准备什么）</a></li>
+                        <li class="py-2"><a href="/news/article-74768.htm" title="动物医院游戏破解版 动物医院游戏破解版无限金币爱心">动物医院游戏破解版 动物医院游戏破解版无限金币爱心</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-node-subscribe.htm" title="3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-99910.htm" title="宠物买卖交易合法吗（宠物买卖交易合法吗安全吗）">宠物买卖交易合法吗（宠物买卖交易合法吗安全吗）</a></li>
                     </ul>
     </div>
 </div>
