--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -163,7 +163,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                         <p><strong>sing-box订阅链接</strong></p>
                         <div class="xcblog-singbox-box"></div>
                         <p>&nbsp;</p>
-                        <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-code="FDn6IwOG" rel="nofollow noopener" style="color:#c00;">山水云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>
+                        <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://xianyuwangluo.top/#/register?code=" data-code="j5kX2iZI" rel="nofollow noopener" style="color:#c00;">闲鱼网络</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -173,16 +173,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-66931.htm" title="米乐医疗科技有限公司怎么样（米乐集团是干什么的）">米乐医疗科技有限公司怎么样（米乐集团是干什么的）</a></li>
-                        <li class="py-2"><a href="/news/article-72093.htm" title="动物疫苗的使用方法及注意事项视频讲解图片下载（动物疫苗知识）">动物疫苗的使用方法及注意事项视频讲解图片下载（动物疫苗知识）</a></li>
-                        <li class="py-2"><a href="/news/article-101270.htm" title="Python实现双X轴双Y轴绘图">Python实现双X轴双Y轴绘图</a></li>
-                        <li class="py-2"><a href="/news/article-83734.htm" title="动物疫苗价格查询表图片及价格大全 动物疫苗价格查询表图片及价格大全集">动物疫苗价格查询表图片及价格大全 动物疫苗价格查询表图片及价格大全集</a></li>
-                        <li class="py-2"><a href="/news/article-76792.htm" title="动物接种疫苗的方法有哪几种（动物常用的接种方法）">动物接种疫苗的方法有哪几种（动物常用的接种方法）</a></li>
-                        <li class="py-2"><a href="/news/article-65668.htm" title="给宠物打过疫苗还会有传染病么（给宠物打了疫苗还能得狂犬病吗?）">给宠物打过疫苗还会有传染病么（给宠物打了疫苗还能得狂犬病吗?）</a></li>
-                        <li class="py-2"><a href="/news/article-82307.htm" title="动物疫苗经销商有哪些 动物疫苗经销商有哪些品牌">动物疫苗经销商有哪些 动物疫苗经销商有哪些品牌</a></li>
-                        <li class="py-2"><a href="/news/article-77469.htm" title="win11系统字体显示不全怎么办">win11系统字体显示不全怎么办</a></li>
-                        <li class="py-2"><a href="/news/article-82308.htm" title="男生发型推荐2020(男生发型推荐帅气)">男生发型推荐2020(男生发型推荐帅气)</a></li>
-                        <li class="py-2"><a href="/news/article-106102.htm" title="宠物乐园怎么样（宠物乐园门票）">宠物乐园怎么样（宠物乐园门票）</a></li>
+                        <li class="py-2"><a href="/news/article-103647.htm" title="使用etcd选举sdk实践master/slave故障转移_在线工具">使用etcd选举sdk实践master/slave故障转移_在线工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-15-free-node-subscribe-links.htm" title="4月15日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">4月15日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-102055.htm" title="vue.js实现标签页切换">vue.js实现标签页切换</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share-links.htm" title="3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-94703.htm" title="深圳益沣成资产管理有限公司（深圳市益成实业有限公司）">深圳益沣成资产管理有限公司（深圳市益成实业有限公司）</a></li>
+                        <li class="py-2"><a href="/news/article-66296.htm" title="宠物粮食品牌前十名排行榜有哪些品种的狗（宠物粮种类）">宠物粮食品牌前十名排行榜有哪些品种的狗（宠物粮种类）</a></li>
+                        <li class="py-2"><a href="/news/article-85881.htm" title="python 在sql语句中使用%s,%d,%f">python 在sql语句中使用%s,%d,%f</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-4-node-share.htm" title="3月4日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">3月4日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-subscribe-node.htm" title="4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-99127.htm" title="宠物粮市场前景如何分析的（宠物粮行业）">宠物粮市场前景如何分析的（宠物粮行业）</a></li>
                     </ul>
     </div>
 </div>
